Finish testing the sensors and actuators on the real setting, also fixed various bugs caused by the Ehcahe.

--- a/src/main/resources/dom0.properties
+++ b/src/main/resources/dom0.properties
@@ -2,20 +2,28 @@ port=9001
 
 violation_threshold=1
 
-vm=jeos,kitty,miku
+vm=sas
 
-vm_ips=192.168.0.101,192.168.0.102,192.168.0.103
+vm_ips=127.0.0.1
 
-vm_ports=9010,9010,9010
+#192.168.0.101
 
-hardware_control_primitive=CPU,Memory
+vm_ports=9010
 
-software_control_primitive=Concurrency
-
-environmental_primitive=Workload
-
-qos=Response Time,Throughput,Availability,Reliability
-
-managed_services=edu.rice.rubis.servlets.SearchItemsByCategory,edu.rice.rubis.servlets.RegisterUser
-
-excluded_services=edu.rice.rubis.servlets.PutBid,edu.rice.rubis.servlets.StoreBid,edu.rice.rubis.servlets.BrowseCategories,edu.rice.rubis.servlets.AboutMe,edu.rice.rubis.servlets.BrowseRegions,edu.rice.rubis.servlets.StoreBuyNow,edu.rice.rubis.servlets.BuyNow,edu.rice.rubis.servlets.BuyNowAuth,edu.rice.rubis.servlets.PutBidAuth,edu.rice.rubis.servlets.PutComment,edu.rice.rubis.servlets.PutCommentAuth,edu.rice.rubis.servlets.RegisterItem,edu.rice.rubis.servlets.SearchItemsByRegion,edu.rice.rubis.servlets.SellItemForm,edu.rice.rubis.servlets.StoreComment,edu.rice.rubis.servlets.ViewBidHistory,edu.rice.rubis.servlets.ViewItem,edu.rice.rubis.servlets.ViewUserInfo
+#vm=jeos,kitty,miku
+#
+#vm_ips=192.168.0.101,192.168.0.102,192.168.0.103
+#
+#vm_ports=9010,9010,9010
+#
+#hardware_control_primitive=CPU,Memory
+#
+#software_control_primitive=Concurrency
+#
+#environmental_primitive=Workload
+#
+#qos=Response Time,Throughput,Availability,Reliability
+#
+#managed_services=edu.rice.rubis.servlets.SearchItemsByCategory,edu.rice.rubis.servlets.RegisterUser
+#
+#excluded_services=edu.rice.rubis.servlets.PutBid,edu.rice.rubis.servlets.StoreBid,edu.rice.rubis.servlets.BrowseCategories,edu.rice.rubis.servlets.AboutMe,edu.rice.rubis.servlets.BrowseRegions,edu.rice.rubis.servlets.StoreBuyNow,edu.rice.rubis.servlets.BuyNow,edu.rice.rubis.servlets.BuyNowAuth,edu.rice.rubis.servlets.PutBidAuth,edu.rice.rubis.servlets.PutComment,edu.rice.rubis.servlets.PutCommentAuth,edu.rice.rubis.servlets.RegisterItem,edu.rice.rubis.servlets.SearchItemsByRegion,edu.rice.rubis.servlets.SellItemForm,edu.rice.rubis.servlets.StoreComment,edu.rice.rubis.servlets.ViewBidHistory,edu.rice.rubis.servlets.ViewItem,edu.rice.rubis.servlets.ViewUserInfo
