Finish translating feature model into genes and inject the dependency into mutation and crossover

--- a/src/main/java/log4j.properties
+++ b/src/main/java/log4j.properties
@@ -22,7 +22,7 @@ log4j.appender.file.layout.ConversionPattern=%d{HH:mm:ss,SSS} %5p %c{1}:%L - %m%
 #log4j.appender.chainsaw.LocationInfo=true
 
 # set standard log format
-webspherious.stdConversionPattern=%n%d{HH:mm:ss,SSS} %-5p at %c.%M(%F:%L) %n    %m%n
+webspherious.stdConversionPattern=%n%d{HH:mm:ss,SSS} %-5p at %c.%M(%F:%L) %n    %m
    
 #architecture frameworks    
 log4j.logger.org.jgroups=error,stdout,file 
@@ -30,4 +30,5 @@ log4j.logger.org.jgroups.protocols.SEQUENCER=error,stdout,file
 log4j.logger.org.jgroups.protocols.pbcast.FLUSH=error,stdout,file
 #log4j.logger.org.ssor.RegionDistributionSynchronyManager=all,stdout,file   
 #log4j.logger.org.ssor.protocol.election.REP=all,stdout,file   
-log4j.logger.org.ssascaling=error,stdout,file 
+log4j.logger.org.ssase=debug,stdout,file 
+log4j.logger.org.ssase.model.sam.ml.ann=error,stdout,file
