--- a/src/main/resources/dom0.properties
+++ b/src/main/resources/dom0.properties
@@ -4,11 +4,13 @@ violation_threshold=1
 
 vm=sas
 
-vm_ips=127.0.0.1
+vm_ips=172.16.177.129
 
 #192.168.0.101
 
 vm_ports=9010
+
+optimization_type=nsgaii
 
 #vm=jeos,kitty,miku
 #
