Add classes for experiments and comparison

--- a/src/main/java/log4j.properties
+++ b/src/main/java/log4j.properties
@@ -32,3 +32,4 @@ log4j.logger.org.jgroups.protocols.pbcast.FLUSH=error,stdout,file
 #log4j.logger.org.ssor.protocol.election.REP=all,stdout,file   
 log4j.logger.org.ssase=debug,stdout,file 
 log4j.logger.org.ssase.model.sam.ml.ann=error,stdout,file
+log4j.logger.org.ssase.objective.optimization.femosaa.FEMOSAASolution=error,stdout,file
