Finish the remaning bits of experiments

--- a/src/main/resources/dom0.properties
+++ b/src/main/resources/dom0.properties
@@ -10,8 +10,8 @@ vm_ips=172.16.177.129
 
 vm_ports=9010
 
-optimization_type=femosaa
-
+optimization_type=init
+#femosaa
 #vm=jeos,kitty,miku
 #
 #vm_ips=192.168.0.101,192.168.0.102,192.168.0.103
