Fixes for experiments

--- a/src/main/java/log4j.properties
+++ b/src/main/java/log4j.properties
@@ -30,6 +30,8 @@ log4j.logger.org.jgroups.protocols.SEQUENCER=error,stdout,file
 log4j.logger.org.jgroups.protocols.pbcast.FLUSH=error,stdout,file
 #log4j.logger.org.ssor.RegionDistributionSynchronyManager=all,stdout,file   
 #log4j.logger.org.ssor.protocol.election.REP=all,stdout,file   
-log4j.logger.org.ssase=debug,stdout,file 
+log4j.logger.org.ssase=error,stdout,file 
 log4j.logger.org.ssase.model.sam.ml.ann=error,stdout,file
+log4j.logger.org.ssase.objective.optimization.femosaa.variability.fm=debug,stdout,file
 log4j.logger.org.ssase.objective.optimization.femosaa.FEMOSAASolution=error,stdout,file
+#log4j.logger.org.ssase.region.Region=debug,stdout,file
