--- a/pom.xml
+++ b/pom.xml
@@ -90,7 +90,7 @@
 						<configuration>
 							<tasks>
 <!-- 								 <scp file="${basedir}/target/ssase-core-1.0.1.one-jar.jar" todir="tao@172.16.177.128:/home/tao" password="Monday22" /> -->
-								  <scp file="${basedir}/target/ssase-core-1.0.1.one-jar.jar" todir="tao@10.42.0.1://home/tao" port="1111" password="cercia" /> 
+								  <scp file="${basedir}/target/ssase-core-1.0.1.one-jar.jar" todir="tao@147.188.200.124://home/tao" port="22" password="cercia" /> <!--port="1111" -->
 								 
 							</tasks>
 						</configuration>
