--- a/src/main/resources/dom0.properties
+++ b/src/main/resources/dom0.properties
@@ -10,8 +10,33 @@ vm_ips=10.0.2.16
 #192.168.0.101
 
 vm_ports=9010
+######################
+#
+# sam = self-adaptive modeling
+#
+#
+#
+#
+######################
+modeling_type=sam
 
-optimization_type=femosaa-d
+######################
+#
+# femosaa =  feature guided and knee driven multi-objective optimization for self-Adaptive software at runtime.
+# femosaa-k = femosaa without dependency aware operators.
+# femosaa-d = femosaa without knee selection.
+# femosaa-0/1 = femosaa thats consider all control features in binary format, and dependency aware operators and knee selection.
+# femosaa-nothing = feamosaa without dependency aware operators and knee selection.
+# moaco = self-adaptive and interference-aware multi-objective ant colony optimization for decision making in self-adaptive software.
+# moga = multi-objective genetic algorithm for optimizing self-adaptive software.
+# bb = exact algorithm (branch-and-bound) based on weighted sum objectives for optimizing self-adaptive software, e.g., in FUSION.
+# nsgaii = NSGA-II for optimizing self-adaptive software, e.g., in DUSE.
+# gp = genetic algorithm based on weighted sum objectives for optimizing self-adaptive software, e.g., in PLATO.
+# gp = ramdom search algorithm based on weighted sum objectives for optimizing self-adaptive software.
+# the others are for testing purpose only. 
+######################
+
+optimization_type=femosaa
 #femosaa
 #vm=jeos,kitty,miku
 #
