Push the implementation for adaptation debt and its integration into the adaptaion cycle

--- a/src/main/resources/dom0.properties
+++ b/src/main/resources/dom0.properties
@@ -10,6 +10,17 @@ vm_ips=10.0.2.16
 #192.168.0.101
 
 vm_ports=9010
+
+######################
+#
+# debt = adaptation debt driven adaptation
+# requirement = adaptation driven by requirement violation
+#
+#
+#
+######################
+trigger_type=debt
+
 ######################
 #
 # sam = self-adaptive modeling
