Update the imbalance aware learner and the relevant testing classes

--- a/src/main/resources/dom0.properties
+++ b/src/main/resources/dom0.properties
@@ -13,12 +13,12 @@ vm_ports=9010
 ######################
 #
 # sam = self-adaptive modeling
-#
+# iapm = imbalance aware
 #
 #
 #
 ######################
-modeling_type=sam
+modeling_type=iapm
 
 ######################
 #
