--- a/src/main/java/log4j.properties
+++ b/src/main/java/log4j.properties
@@ -34,4 +34,5 @@ log4j.logger.org.ssase=error,stdout,file
 log4j.logger.org.ssase.model.sam.ml.ann=error,stdout,file
 log4j.logger.org.ssase.objective.optimization.femosaa.variability.fm=debug,stdout,file
 log4j.logger.org.ssase.objective.optimization.femosaa.FEMOSAASolution=error,stdout,file
+log4j.logger.org.ssase.util.StepByStepHistoryLoader=debug,stdout,file
 #log4j.logger.org.ssase.region.Region=debug,stdout,file
