--- a/pom.xml
+++ b/pom.xml
@@ -204,7 +204,11 @@
 			<artifactId>weka-dev</artifactId>
 			<version>3.7.13</version>
 		</dependency>
-
+<!-- <dependency> -->
+<!--     <groupId>tw.edu.ntu.csie</groupId> -->
+<!--     <artifactId>libsvm</artifactId> -->
+<!--     <version>3.17</version> -->
+<!-- </dependency> -->
 		<dependency>
 			<groupId>nz.ac.waikato.cms.moa</groupId>
 			<artifactId>moa</artifactId>
