--- a/src/main/resources/dom0.properties
+++ b/src/main/resources/dom0.properties
@@ -15,11 +15,11 @@ vm_ports=9010
 #
 # debt = adaptation debt driven adaptation
 # requirement = adaptation driven by requirement violation
-#
-#
+# debtall
+# frequency
 #
 ######################
-trigger_type=debtall
+trigger_type=requirement
 
 ######################
 #
