Add coevolution on invalid solutions

--- a/src/main/resources/dom0.properties
+++ b/src/main/resources/dom0.properties
@@ -24,12 +24,12 @@ trigger_type=requirement
 ######################
 #
 # sam = self-adaptive modeling
-#
+# delegate
 #
 #
 #
 ######################
-modeling_type=sam
+modeling_type=delegate
 
 ######################
 #
@@ -47,7 +47,7 @@ modeling_type=sam
 # the others are for testing purpose only. 
 ######################
 
-optimization_type=femosaa
+optimization_type=femosaa-01
 #femosaa
 #vm=jeos,kitty,miku
 #
