--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,6 @@ src/test/
 SASM2/
 weight/
 data/
+
+xperiments-data/on-off/wsdream/processed/rtdata/
+xperiments-data/on-off/wsdream/processed/tpdata/
