Add a newly compared prediction based triggering approach

--- a/src/main/resources/dom0.properties
+++ b/src/main/resources/dom0.properties
@@ -13,31 +13,47 @@ vm_ports=9010
 
 ######################
 #
-# debt = adaptation debt driven adaptation
+# debt = adaptation debt driven adaptation, only update the learner when adaptation has been triggered
 # requirement = adaptation driven by requirement violation
-# debtall
-# frequency
+# debtall = adaptation debt driven adaptation, update learner regardless whether adaptation has been triggered
+# frequency = performing adaptation on each timestep, or based on a predefined number of timesteps
+# prediction = performing two-phase estimation and prediction to trigger adaptation
 #
 ######################
-trigger_type=requirement
+trigger_type=debtall
 
 ######################
 #
 # sam = self-adaptive modeling
-# delegate
+# delegate = for SOA testbed
 #
 #
 #
 ######################
-modeling_type=delegate
+modeling_type=sam
 
 ######################
 #
 # femosaa =  feature guided and knee driven multi-objective optimization for self-Adaptive software at runtime. (use MOEA/D-STM as default MOEA)
-# femosaa-d = femosaa without dependency aware operators. (use MOEA/D-STM as default MOEA)
-# femosaa-k = femosaa without knee selection. (use MOEA/D-STM as default MOEA)
+# femosaa-k = femosaa without dependency aware operators. (use MOEA/D-STM as default MOEA)
+# femosaa-d = femosaa without knee selection. (use MOEA/D-STM as default MOEA)
 # femosaa-01 = femosaa thats consider all control features in binary format;no dependency aware operators and knee selection. (use MOEA/D-STM as default MOEA)
 # femosaa-nothing = feamosaa without dependency aware operators and knee selection. (use MOEA/D-STM as default MOEA)
+
+
+# femosaa-nsgaii =  feature guided and knee driven multi-objective optimization for self-Adaptive software at runtime. (use NSGA-II MOEA)
+# nsgaii-k = femosaa without dependency aware operators. (use NSGA-II as MOEA)
+# nsgaii-d = femosaa without knee selection. (use NSGA-II as MOEA)
+# nsgaii-01 = femosaa thats consider all control features in binary format;no dependency aware operators and knee selection. (use NSGA-II as MOEA)
+# nsgaii = feamosaa without dependency aware operators and knee selection. (use NSGA-II as MOEA)
+
+# femosaa-ibea =  feature guided and knee driven multi-objective optimization for self-Adaptive software at runtime. (use IBEA MOEA)
+# ibea-k = femosaa without dependency aware operators. (use IBEA as MOEA)
+# ibea-d = femosaa without knee selection. (use IBEA as MOEA)
+# ibea-01 = femosaa thats consider all control features in binary format;no dependency aware operators and knee selection. (use IBEA as MOEA)
+# ibea = feamosaa without dependency aware operators and knee selection. (use IBEA as MOEA)
+
+
 # moaco = self-adaptive and interference-aware multi-objective ant colony optimization for decision making in self-adaptive software.
 # moga = multi-objective genetic algorithm for optimizing self-adaptive software.
 # bb = exact algorithm (branch-and-bound) based on weighted sum objectives for optimizing self-adaptive software, e.g., in FUSION.
@@ -47,7 +63,7 @@ modeling_type=delegate
 # the others are for testing purpose only. 
 ######################
 
-optimization_type=femosaa-01
+optimization_type=femosaa
 #femosaa
 #vm=jeos,kitty,miku
 #
