Update experiments data and some testting setup

--- a/src/main/resources/dom0.properties
+++ b/src/main/resources/dom0.properties
@@ -20,7 +20,7 @@ vm_ports=9010
 # prediction = performing two-phase estimation and prediction to trigger adaptation
 #
 ######################
-trigger_type=debtall
+trigger_type=requirement
 
 ######################
 #
@@ -30,7 +30,7 @@ trigger_type=debtall
 #
 #
 ######################
-modeling_type=sam
+modeling_type=delegate
 
 ######################
 #
