Update more benchmark and the experiment for seeding extension

--- a/src/main/resources/dom0.properties
+++ b/src/main/resources/dom0.properties
@@ -25,7 +25,7 @@ trigger_type=requirement
 ######################
 #
 # sam = self-adaptive modeling
-# delegate = for SOA testbed
+# delegate = for SOA/benchmark testbed
 #
 #
 #
@@ -63,7 +63,7 @@ modeling_type=delegate
 # the others are for testing purpose only. 
 ######################
 
-optimization_type=femosaa
+optimization_type=femosaa-nsgaii
 #femosaa
 #vm=jeos,kitty,miku
 #
