Finish some changes. Note that if no dependency or if every gene are indepdent genes, then it would be fine even if the FM is loaded twice, as the later one would overwrite the former one.

--- a/src/main/resources/dom0.properties
+++ b/src/main/resources/dom0.properties
@@ -60,10 +60,12 @@ modeling_type=delegate
 # nsgaii = NSGA-II for optimizing self-adaptive software, e.g., in DUSE.
 # gp = genetic algorithm based on weighted sum objectives for optimizing self-adaptive software, e.g., in PLATO.
 # random = ramdom search algorithm based on weighted sum objectives for optimizing self-adaptive software.
+# rs = new random search that uniformly searching over the variable vector.
+# hc = hill climbing that climbs based on neighbours, where the neighbour means the next adjacent variable.
 # the others are for testing purpose only. 
 ######################
 
-optimization_type=femosaa-nsgaii
+optimization_type=gp
 #femosaa
 #vm=jeos,kitty,miku
 #
