Setup ready for the fuzzy MOO for SAS under RUBiS experiments

--- a/src/main/resources/dom0.properties
+++ b/src/main/resources/dom0.properties
@@ -30,7 +30,7 @@ trigger_type=requirement
 #
 #
 ######################
-modeling_type=delegate
+modeling_type=sam
 
 ######################
 #
@@ -65,7 +65,7 @@ modeling_type=delegate
 # the others are for testing purpose only. 
 ######################
 
-optimization_type=gp
+optimization_type=femosaa-nsgaii
 #femosaa
 #vm=jeos,kitty,miku
 #
